@@ -224,11 +224,10 @@ and 'a t = 'a t u;;
 Line 2, characters 0-17:
 2 | and 'a t = 'a t u;;
     ^^^^^^^^^^^^^^^^^
-Error: The definition of t contains a cycle:
+Error: The type abbreviation t is cyclic:
          'a t u contains 'a t,
          'a t = 'a t u,
-         'a t u contains 'a t,
-         'a t = 'a t u
+         'a t u contains 'a t
 |}];; (* fails since 4.04 *)
 type 'a u = 'a
 and 'a t = 'a t u;;
@@ -237,8 +236,6 @@ Line 2, characters 0-17:
 2 | and 'a t = 'a t u;;
     ^^^^^^^^^^^^^^^^^
 Error: The type abbreviation t is cyclic:
-         'a t = 'a t u,
-         'a t u contains 'a t,
          'a t = 'a t u,
          'a t u = 'a t
 |}];;
@@ -252,8 +249,6 @@ Line 1, characters 0-18:
 1 | type t = t u * t u;;
     ^^^^^^^^^^^^^^^^^^
 Error: The type abbreviation t is cyclic:
-         t = t u * t u,
-         t u * t u contains t,
          t = t u * t u,
          t u * t u contains t u,
          t u = t
