@@ -313,7 +313,5 @@ Line 2, characters 0-21:
     ^^^^^^^^^^^^^^^^^^^^^
 Error: The type abbreviation cycle is cyclic:
          cycle = cycle id,
-         cycle id contains cycle,
-         cycle = cycle id,
          cycle id contains cycle
 |}];;
